# sage-billing-engine

./: .gitmodules  Dockerfile  ReadMe.md  buf.gen.yaml  buildspec.yml  pyproject.toml  start_server.sh
app/: main.py
app/api/: __init__.py  checkout.py  entitlements.py  plans.py  subscriptions.py  usage.py  webhooks.py
app/clients/: __init__.py  sqs_client.py  stripe_client.py
app/consumers/: __init__.py  payment_events.py  stripe_events.py  usage_events.py
app/core/: cache.py  config.py  db.py  grpc_clients.py  logging.py  redis.py
app/grpc/: __init__.py  billing_servicer.py  server.py
app/models/: enums.py  schemas.py
app/repositories/: billing_repository.py
app/services/: billing_projection_service.py  billing_service.py  billing_usage_service.py  checkout_service.py  entitlement_service.py  subscription_service.py  usage_service.py
sagepilot/billing/: billing_pb2.py  billing_pb2_grpc.py
sagepilot/databaseaccess/: databaseaccess_pb2.py  databaseaccess_pb2_grpc.py
sagepilot/sage_engine/: ai_service_pb2.py  ai_service_pb2_grpc.py  example_pb2.py  example_pb2_grpc.py
