[tool.poetry]
name = "sage-billing-engine"
version = "0.1.0"
description = "Sage Billing Engine — Stripe billing, entitlements, usage metering, and multi-gateway payment reconciliation"
authors = ["vikram2000b <vikram@sagepilot.ai>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "^0.41.0"}
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"

# Stripe
stripe = ">=12.0.0"

# Razorpay
razorpay = ">=1.4.0"

# AWS (SQS)
boto3 = ">=1.42.0"

# Redis
redis = ">=7.0.0"

# Caching
aiocache = ">=0.12.3"

# gRPC (database access)
grpcio = ">=1.76.0"
protobuf = ">=6.0.0"

# Observability
opentelemetry-sdk = ">=1.39.0"
opentelemetry-exporter-otlp = ">=1.39.0"

# HTTP client
httpx = ">=0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
black = "*"
isort = "*"
mypy = "*"
ruff = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = ["E501"]
line-length = 88
target-version = "py311"
